20130911 ECF
	* Started plugin