@@ -1,8 +1,15 @@
-#Serendipity OpenGraph Plugin
+# Serendipity SEO Plugin
 
-This is a plugin to interface the [*serendipity blog platform*](http://www.s9y.org/) with Facebook Services.
+This is a plugin to interface the [*serendipity blog platform*](http://www.s9y.org/) with
+* Facebook Opengraph
+* Twitter
+* Google Publisher
+* More!
 
 This is not complete, so if you stumble upon it, use at your own risk.
 
-#Goals are:  
-* Write a lightweight plugin to add opengraph meta tags to the header for each entry
+## Goals are:
+* Write a lightweight plugin to add helpful meta tags to the header for each entry
+
+## Notes:
+* This used to be the serendipity_event_opengraph plugin
