@@ -6,9 +6,25 @@
  *  EN-Revision: Revision of lang_en.inc.php
  */
 
-@define('PLUGIN_EVENT_AWS_INSTALL', '');
-@define('PLUGIN_EVENT_OG_NAME', 'Opengraph Plugin');
-@define('PLUGIN_EVENT_OG_DESC', 'Implements Opengraph Meta Tags');
-@define('PLUGIN_EVENT_OG_PROP_META_ON', 'Insert Metadata?');
-@define('PLUGIN_EVENT_OG_PROP_META_ON_DESC', 'Attempt to insert og:xxxxx metadata.');
+@define('PLUGIN_EVENT_SEO_INSTALL', '');
+@define('PLUGIN_EVENT_SEO_NAME', 'SEO Plugin');
+@define('PLUGIN_EVENT_SEO_DESC', 'Implements SEO Meta Tags');
+@define('PLUGIN_EVENT_SEO_OG_META_ON', 'Insert Opengraph Metadata?');
+@define('PLUGIN_EVENT_SEO_OG_META_ON_DESC', 'Attempt to insert og:xxxx metadata?');
+@define('PLUGIN_EVENT_SEO_OG_PUBLISHER', 'Facebook Publisher URL');
+@define('PLUGIN_EVENT_SEO_OG_PUBLISHER_DESC', '');
+@define('PLUGIN_EVENT_SEO_OG_ADMINS', 'Facebook Admins');
+@define('PLUGIN_EVENT_SEO_OG_ADMINS_DESC', 'Facebook ID(s) who can see data about your site');
+@define('PLUGIN_EVENT_SEO_TW_META_ON', 'Insert Twitter Metadata?');
+@define('PLUGIN_EVENT_SEO_TW_META_ON_DESC', 'Attempt to insert twitter metadata?');
+@define('PLUGIN_EVENT_SEO_TW_DOMAIN', 'twitter:domain');
+@define('PLUGIN_EVENT_SEO_TW_DOMAIN_DESC', 'See: https://dev.twitter.com/cards/markup');
+@define('PLUGIN_EVENT_SEO_TW_CREATOR', 'twitter:creator');
+@define('PLUGIN_EVENT_SEO_TW_CREATOR_DESC', 'The twitter handle for the content creator. See: https://dev.twitter.com/cards/markup');
+@define('PLUGIN_EVENT_SEO_GP_META_ON', 'Insert Google Plus Metadata?');
+@define('PLUGIN_EVENT_SEO_GP_META_ON_DESC', 'Attempt to insert google plus metadata?');
+@define('PLUGIN_EVENT_SEO_GP_PUBLISHER', 'Google Plus Publisher URL');
+@define('PLUGIN_EVENT_SEO_GP_PUBLISHER_DESC', '');
+@define('PLUGIN_EVENT_SEO_MISC_META_ON', 'Insert Misc Metadata?');
+@define('PLUGIN_EVENT_SEO_MISC_META_ON_DESC', 'Attempt to insert miscellaneous metadata?');
 ?>
