@@ -1,2 +1,6 @@
 20130911 ECF
 	* Started plugin
+
+20150517 ECF
+  * Converted to SEO plugin
+  * Add other useful meta tags
